Fixed #13: Table cells don't wrap

--- a/src/assets/stylesheets/modules/article/_layout.scss
+++ b/src/assets/stylesheets/modules/article/_layout.scss
@@ -242,7 +242,7 @@
       padding: 12px 16px;
       font-size: 12px;
       text-align: left;
-      white-space: nowrap;
+      vertical-align: top;
     }
 
     /*
@@ -250,7 +250,7 @@
      */
     td {
       padding: 12px 16px;
-      white-space: nowrap;
+      vertical-align: top;
     }
   }
 
